--- a/index.html
+++ b/index.html
@@ -27,15 +27,155 @@
                 Watch live football match around the world any thime you want. Easy subscription and high quality
                 service. Learn expert's openion and predictions on match in out blogs.
             </p>
-            <button>Watch Live </button>
+            <button>Watch Live <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="hero-img">
             <img src="images/Banner Image.png" alt="">
         </div>
     </header>
+
+
     <!-- 
-        ------------------------ Header Section End --------------------------------
+        ------------------------ Main Section Start --------------------------------
      -->
+    <main>
+        <!-- Side Menu -->
+        <aside class="side-menu">
+            <a class="side-btn" href="match.html">Upcoming Match</a>
+            <a class="side-btn" href="#">All groups</a>
+            <a class="side-btn" href="#">Blogs</a>
+        </aside>
+
+        <!-- Article Sections -->
+        <section class="blogs">
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+
+            <article class="blog">
+                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <div class="blog-info">
+                    <a href="#" class="transfer-link">Transfer</a>
+                    <p class="blog-text">
+                        Transfer Live: Chlesea in talks over Kimpenbe transfer
+                    </p>
+                    <span class="blog-icon"><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span class="blog-icon"><i class="fa-regular fa-message"></i> 23</span>
+                </div>
+            </article>
+        </section>
+    </main>
+
+
+    <!-- 
+        ------------------------ Footer Section Start --------------------------------
+     -->
+    <footer>
+        <h2>World Football</h2>
+        <hr>
+        <div class="footer-menu">
+            <a href="#" class="menu-item">Contact Us</a>
+            <a href="#" class="menu-item">Terms of Service</a>
+            <a href="#" class="menu-item">Privacy Policy</a>
+            <a href="#" class="menu-item">Privacy Settings</a>
+            <a href="#" class="menu-item">Our App</a>
+            <a href="#" class="menu-item">Live Match</a>
+        </div>
+    </footer>
+
 </body>
 
 </html>
