added social icons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <button>Watch Live <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="hero-img">
-            <img src="images/Banner Image.png" alt="">
+            <img class="marcello" src="images/Banner Image.png" alt="">
+            <img class="messi" src="images/Banner Image 1.png" alt="">
         </div>
     </header>
 
@@ -52,7 +53,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -64,7 +65,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -76,7 +77,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -88,7 +89,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -100,7 +101,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -112,7 +113,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -124,7 +125,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -136,7 +137,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -148,7 +149,7 @@
             <article class="blog">
                 <img src="images/Blog Image.png" alt="" class="blog-img">
                 <div class="blog-info">
-                    <a href="#" class="transfer-link">Transfer</a>
+                    <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
                         Transfer Live: Chlesea in talks over Kimpenbe transfer
                     </p>
@@ -173,6 +174,11 @@
             <a href="#" class="menu-item">Privacy Settings</a>
             <a href="#" class="menu-item">Our App</a>
             <a href="#" class="menu-item">Live Match</a>
+        </div>
+        <div class="social-links">
+            <a class="social-link" href="www.facebook.com"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="www.twitter.com" class="social-link"><i class="fa-brands fa-twitter-square"></i></a>
+            <a href="www.linkedin.com" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </footer>
 
