--- a/match.html
+++ b/match.html
@@ -30,7 +30,8 @@
             <button>Watch Live <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="hero-img">
-            <img src="images/Banner Image.png" alt="">
+            <img class="marcello" src="images/Banner Image.png" alt="">
+            <img class="messi" src="images/Banner Image 1.png" alt="">
         </div>
     </header>
 
@@ -46,7 +47,71 @@
             <a class="side-btn" href="#">Blogs</a>
         </aside>
 
+        <!-- Article Sections -->
+        <section class="live-links">
 
+            <article class="live-link">
+                <div class="link-img-area">
+                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <span class="vs-sign">VS</span>
+                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                </div>
+                <p class="live-link-title">Germany VS France</p>
+                <small class="match-time">April 01, 2023, 1 AM</small>
+            </article>
+
+            <article class="live-link">
+                <div class="link-img-area">
+                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <span class="vs-sign">VS</span>
+                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                </div>
+                <p class="live-link-title">Germany VS France</p>
+                <small class="match-time">April 01, 2023, 1 AM</small>
+            </article>
+
+            <article class="live-link">
+                <div class="link-img-area">
+                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <span class="vs-sign">VS</span>
+                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                </div>
+                <p class="live-link-title">Germany VS France</p>
+                <small class="match-time">April 01, 2023, 1 AM</small>
+            </article>
+
+            <article class="live-link">
+                <div class="link-img-area">
+                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <span class="vs-sign">VS</span>
+                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                </div>
+                <p class="live-link-title">Germany VS France</p>
+                <small class="match-time">April 01, 2023, 1 AM</small>
+            </article>
+
+            <article class="live-link">
+                <div class="link-img-area">
+                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <span class="vs-sign">VS</span>
+                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                </div>
+                <p class="live-link-title">Germany VS France</p>
+                <small class="match-time">April 01, 2023, 1 AM</small>
+            </article>
+
+            <article class="live-link">
+                <div class="link-img-area">
+                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <span class="vs-sign">VS</span>
+                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                </div>
+                <p class="live-link-title">Germany VS France</p>
+                <small class="match-time">April 01, 2023, 1 AM</small>
+            </article>
+
+
+        </section>
     </main>
 
 
@@ -63,6 +128,11 @@
             <a href="#" class="menu-item">Privacy Settings</a>
             <a href="#" class="menu-item">Our App</a>
             <a href="#" class="menu-item">Live Match</a>
+        </div>
+        <div class="social-links">
+            <a class="social-link" href="www.facebook.com"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="www.twitter.com" class="social-link"><i class="fa-brands fa-twitter-square"></i></a>
+            <a href="www.linkedin.com" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </footer>
 
