Added some styles

--- a/match.html
+++ b/match.html
@@ -9,7 +9,17 @@
     <!-- Font Awosome -->
     <script src="https://kit.fontawesome.com/270fd2fc7a.js" crossorigin="anonymous"></script>
 
-    <title>World Football</title>
+    <!-- Gooogle Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
+
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="Styles/style.css">
+
+    <title>Live Match - World Football</title>
 </head>
 
 <body>
@@ -29,9 +39,7 @@
             </p>
             <button>Watch Live <i class="fa-solid fa-arrow-right"></i></button>
         </div>
-        <div class="hero-img">
-            <img class="marcello" src="images/Banner Image.png" alt="">
-            <img class="messi" src="images/Banner Image 1.png" alt="">
+        <div class="hero-imgs">
         </div>
     </header>
 
@@ -42,7 +50,7 @@
     <main>
         <!-- Side Menu -->
         <aside class="side-menu">
-            <a class="side-btn" href="match.html">Upcoming Match</a>
+            <a class="side-btn" href="match.html" style="background: rgba(255, 33, 33, 0.7);;">Upcoming Match</a>
             <a class="side-btn" href="#">All groups</a>
             <a class="side-btn" href="#">Blogs</a>
         </aside>
