had an image issue

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="blogs">
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -71,7 +71,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -83,7 +83,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -95,7 +95,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -107,7 +107,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -119,7 +119,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -131,7 +131,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -143,7 +143,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
@@ -155,7 +155,7 @@
             </article>
 
             <article class="blog">
-                <img src="images/Blog Image.png" alt="" class="blog-img">
+                <img src="photo/blog.png" alt="" class="blog-img">
                 <div class="blog-info">
                     <button class="transfer-link">Transfer</button>
                     <p class="blog-text">
