--- a/match.html
+++ b/match.html
@@ -52,7 +52,7 @@
         <aside class="side-menu">
             <a class="side-btn" href="match.html" style="background: rgba(255, 33, 33, 0.7);;">Upcoming Match</a>
             <a class="side-btn" href="#">All groups</a>
-            <a class="side-btn" href="#">Blogs</a>
+            <a class="side-btn" href="index.html">Blogs</a>
         </aside>
 
         <!-- Article Sections -->
@@ -60,9 +60,9 @@
 
             <article class="live-link">
                 <div class="link-img-area">
-                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <img src="photo/Flag.png" alt="Flag of France" class="link-img">
                     <span class="vs-sign">VS</span>
-                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                    <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
                 <p class="live-link-title">Germany VS France</p>
                 <small class="match-time">April 01, 2023, 1 AM</small>
@@ -70,9 +70,9 @@
 
             <article class="live-link">
                 <div class="link-img-area">
-                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <img src="photo/Flag.png" alt="Flag of France" class="link-img">
                     <span class="vs-sign">VS</span>
-                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                    <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
                 <p class="live-link-title">Germany VS France</p>
                 <small class="match-time">April 01, 2023, 1 AM</small>
@@ -80,9 +80,9 @@
 
             <article class="live-link">
                 <div class="link-img-area">
-                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <img src="photo/Flag.png" alt="Flag of France" class="link-img">
                     <span class="vs-sign">VS</span>
-                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                    <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
                 <p class="live-link-title">Germany VS France</p>
                 <small class="match-time">April 01, 2023, 1 AM</small>
@@ -90,9 +90,9 @@
 
             <article class="live-link">
                 <div class="link-img-area">
-                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <img src="photo/Flag.png" alt="Flag of France" class="link-img">
                     <span class="vs-sign">VS</span>
-                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                    <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
                 <p class="live-link-title">Germany VS France</p>
                 <small class="match-time">April 01, 2023, 1 AM</small>
@@ -100,9 +100,9 @@
 
             <article class="live-link">
                 <div class="link-img-area">
-                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <img src="photo/Flag.png" alt="Flag of France" class="link-img">
                     <span class="vs-sign">VS</span>
-                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                    <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
                 <p class="live-link-title">Germany VS France</p>
                 <small class="match-time">April 01, 2023, 1 AM</small>
@@ -110,9 +110,9 @@
 
             <article class="live-link">
                 <div class="link-img-area">
-                    <img src="images/Flag.png" alt="Flag of France" class="link-img">
+                    <img src="photo/Flag.png" alt="Flag of France" class="link-img">
                     <span class="vs-sign">VS</span>
-                    <img src="images/germany Flag.png" alt="Flag of Germany" class="link-img">
+                    <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
                 <p class="live-link-title">Germany VS France</p>
                 <small class="match-time">April 01, 2023, 1 AM</small>
