edited style sheet

--- a/match.html
+++ b/match.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Live Match - World Football</title>
 </head>
