--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>World Football</title>
 </head>
