--- a/match.html
+++ b/match.html
@@ -64,8 +64,10 @@
                     <span class="vs-sign">VS</span>
                     <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
-                <p class="live-link-title">Germany VS France</p>
-                <small class="match-time">April 01, 2023, 1 AM</small>
+                <div class="live-link-text">
+                    <p class="live-link-title">Germany VS France</p>
+                    <small class="match-time">April 01, 2023, 1 AM</small>
+                </div>
             </article>
 
             <article class="live-link">
@@ -74,8 +76,10 @@
                     <span class="vs-sign">VS</span>
                     <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
-                <p class="live-link-title">Germany VS France</p>
-                <small class="match-time">April 01, 2023, 1 AM</small>
+                <div class="live-link-text">
+                    <p class="live-link-title">Germany VS France</p>
+                    <small class="match-time">April 01, 2023, 1 AM</small>
+                </div>
             </article>
 
             <article class="live-link">
@@ -84,8 +88,10 @@
                     <span class="vs-sign">VS</span>
                     <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
-                <p class="live-link-title">Germany VS France</p>
-                <small class="match-time">April 01, 2023, 1 AM</small>
+                <div class="live-link-text">
+                    <p class="live-link-title">Germany VS France</p>
+                    <small class="match-time">April 01, 2023, 1 AM</small>
+                </div>
             </article>
 
             <article class="live-link">
@@ -94,8 +100,10 @@
                     <span class="vs-sign">VS</span>
                     <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
-                <p class="live-link-title">Germany VS France</p>
-                <small class="match-time">April 01, 2023, 1 AM</small>
+                <div class="live-link-text">
+                    <p class="live-link-title">Germany VS France</p>
+                    <small class="match-time">April 01, 2023, 1 AM</small>
+                </div>
             </article>
 
             <article class="live-link">
@@ -104,8 +112,10 @@
                     <span class="vs-sign">VS</span>
                     <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
-                <p class="live-link-title">Germany VS France</p>
-                <small class="match-time">April 01, 2023, 1 AM</small>
+                <div class="live-link-text">
+                    <p class="live-link-title">Germany VS France</p>
+                    <small class="match-time">April 01, 2023, 1 AM</small>
+                </div>
             </article>
 
             <article class="live-link">
@@ -114,9 +124,12 @@
                     <span class="vs-sign">VS</span>
                     <img src="photo/germany.png" alt="Flag of Germany" class="link-img">
                 </div>
-                <p class="live-link-title">Germany VS France</p>
-                <small class="match-time">April 01, 2023, 1 AM</small>
+                <div class="live-link-text">
+                    <p class="live-link-title">Germany VS France</p>
+                    <small class="match-time">April 01, 2023, 1 AM</small>
+                </div>
             </article>
+
 
 
         </section>
