Responsive styles added

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
             </article>
         </section>
     </main>
+    <div class="view-all">
+        <button>View All</button>
+    </div>
 
 
     <!-- 
@@ -184,9 +187,12 @@
             <a href="#" class="menu-item">Live Match</a>
         </div>
         <div class="social-links">
-            <a class="social-link" href="www.facebook.com"><i class="fa-brands fa-facebook-square"></i></a>
-            <a href="www.twitter.com" class="social-link"><i class="fa-brands fa-twitter-square"></i></a>
-            <a href="www.linkedin.com" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
+            <a class="social-link" href="https://www.facebook.com/" target="_blank"><i
+                    class="fa-brands fa-facebook-square"></i></a>
+            <a href="https://twitter.com" class="social-link" target="_blank"><i
+                    class="fa-brands fa-twitter-square"></i></a>
+            <a href="https://www.linkedin.com/" class="social-link" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
         </div>
     </footer>
 
