--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Font Awosome -->
     <script src="https://kit.fontawesome.com/270fd2fc7a.js" crossorigin="anonymous"></script>
 
+    <!-- Fav Icon  -->
+    <link rel="shortcut icon" href="photo/football.png" type="image/x-icon">
+
     <!-- Gooogle Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
