--- a/match.html
+++ b/match.html
@@ -16,6 +16,9 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
 
+    <!-- Fav Icon  -->
+    <link rel="shortcut icon" href="photo/football.png" type="image/x-icon">
+
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css">
 
