--- a/match.html
+++ b/match.html
@@ -53,7 +53,7 @@
     <main>
         <!-- Side Menu -->
         <aside class="side-menu">
-            <a class="side-btn" href="match.html" style="background: rgba(255, 33, 33, 0.7);;">Upcoming Match</a>
+            <a class="side-btn" href="match.html" style="background: rgba(255, 33, 33, 0.7);">Upcoming Match</a>
             <a class="side-btn" href="#">All groups</a>
             <a class="side-btn" href="index.html">Blogs</a>
         </aside>
