--- a/match.html
+++ b/match.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <!-- Font Awosome -->
     <script src="https://kit.fontawesome.com/270fd2fc7a.js" crossorigin="anonymous"></script>
+
 
     <!-- Gooogle Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,8 +18,10 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
 
+
     <!-- Fav Icon  -->
     <link rel="shortcut icon" href="photo/football.png" type="image/x-icon">
+
 
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css">
@@ -31,17 +35,20 @@
         ------------------------ Header Section Start --------------------------------
      -->
     <header>
+
         <!-- Hero Text -->
         <div class="hero-text">
             <h1>
                 The Greatest Show on the Earth
             </h1>
             <p>
-                Watch live football match around the world any thime you want. Easy subscription and high quality
+                Watch live football match around the world any time you want. Easy subscription and high quality
                 service. Learn expert's openion and predictions on match in out blogs.
             </p>
             <button>Watch Live <i class="fa-solid fa-arrow-right"></i></button>
         </div>
+
+        <!-- Hero Background Image  -->
         <div class="hero-imgs">
         </div>
     </header>
@@ -145,6 +152,8 @@
     <footer>
         <h2>World Football</h2>
         <hr>
+
+        <!-- Footer Menu -->
         <div class="footer-menu">
             <a href="#" class="menu-item">Contact Us</a>
             <a href="#" class="menu-item">Terms of Service</a>
@@ -153,6 +162,8 @@
             <a href="#" class="menu-item">Our App</a>
             <a href="#" class="menu-item">Live Match</a>
         </div>
+
+        <!-- Social Links -->
         <div class="social-links">
             <a class="social-link" href="https://www.facebook.com/" target="_blank"><i
                     class="fa-brands fa-facebook-square"></i></a>
