--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
             </article>
         </section>
     </main>
+
+    <!-- ----------------------------------
+(View All) Button for tablet view Only 
+------------------------------------ -->
+
     <div class="view-all">
         <button>View All</button>
     </div>
