--- a/match.html
+++ b/match.html
@@ -65,7 +65,7 @@
             <a class="side-btn" href="index.html">Blogs</a>
         </aside>
 
-        <!-- Article Sections -->
+        <!-- Article Sections(Live Link) -->
         <section class="live-links">
 
             <article class="live-link">
